--- a/Code-Editor/code-editor/index.html
+++ b/Code-Editor/code-editor/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + React</title>
+  <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfu7RPkhVLFZ0IFekK7He9-UQQt-fT0fcPiw&s" type="image/x-icon">
 </head>
 
 <body>
