--- a/Code-Editor/code-editor/index.html
+++ b/Code-Editor/code-editor/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Code Editor</title>
   <link rel="shortcut icon" href="../code-editor/public/codepen_logo_dark_bg_white_logo.png" type="image/x-icon">
 </head>
 
